k8s/11-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pv
  namespace: demo
spec:
  containers:
  - name: test
    image: nginx:1.21-alpine
    volumeMounts:
    - name: vol
      mountPath: /foo
  volumes:
  - name: vol
    persistentVolumeClaim:
      claimName: foo-pvc
