k8s/12-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: demo
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: nginx
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bar
  namespace: demo
spec:
  # podManagementPolicy: OrderedReady
  # podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: nginx
  serviceName: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.21-alpine
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-path # Нужно указать!
      resources:
        requests:
          storage: 1Gi
